<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true"
    app:layoutDescription="@xml/motion_scene">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/tbHome"
        style="@style/Widget.Material3.Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/discover"
        app:titleTextAppearance="@style/TextAppearance.Material3.HeadlineMedium"
        app:titleTextColor="?colorOnPrimaryContainer" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/search"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:transitionName="@string/search_transition"
        app:icon="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@id/shadowLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/favorite"
        style="@style/Widget.Material3.Button.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:transitionName="@string/favourite_transition"
        app:icon="@drawable/ic_favorite"
        app:layout_constraintBottom_toTopOf="@id/shadowLayout"
        app:layout_constraintEnd_toStartOf="@id/search"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:focusable="false"
        android:paddingBottom="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tbHome" />

</androidx.constraintlayout.motion.widget.MotionLayout>