<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/media_player_controls_background">

    <ImageButton
        android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:padding="8dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="@id/episodeName"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="@id/topGuideLine" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/animeName"
        android:layout_width="wrap_content"
        style="@style/TextAppearance.Material3.TitleMedium"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:maxLines="2"
        app:layout_constraintBottom_toBottomOf="@id/back"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toTopOf="@id/topGuideLine"
        tools:text="Naruto Shippuden" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/episodeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.Material3.LabelMedium"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:maxWidth="450dp"
        android:maxLines="2"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:layout_constraintTop_toBottomOf="@id/animeName"
        tools:text="Episode 7" />



    <ImageButton
        android:id="@id/exo_play"
        style="@style/ExoMediaButton.Play"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:src="@drawable/anim_play_to_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exo_rewind_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exo_rew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_media_seek_backward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exo_rewind_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="@color/media_player_controls"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/exo_rew"
            app:layout_constraintEnd_toEndOf="@id/exo_rew"
            app:layout_constraintStart_toStartOf="@id/exo_rew"
            app:layout_constraintTop_toTopOf="@id/exo_rew"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/exo_rewind_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_minus10"
            android:textColor="@color/media_player_controls"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/exo_rew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/exo_rew"
            app:layout_constraintVertical_bias="0.55" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/exo_forward_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/exo_ffwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="16dp"
            android:src="@drawable/ic_media_seek_forward"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/exo_forward_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_10"
            android:textColor="@color/media_player_controls"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/exo_ffwd"
            app:layout_constraintEnd_toEndOf="@id/exo_ffwd"
            app:layout_constraintStart_toStartOf="@id/exo_ffwd"
            app:layout_constraintTop_toTopOf="@id/exo_ffwd"
            app:layout_constraintVertical_bias="0.55" />

        <TextView
            android:id="@+id/exo_forward_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_plus10"
            android:textColor="@color/media_player_controls"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/exo_ffwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/exo_ffwd"
            app:layout_constraintVertical_bias="0.55" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.media3.ui.DefaultTimeBar
        android:id="@+id/exo_progress"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:progressTint="@color/media_player_controls"
        app:bar_height="2dp"
        app:layout_constraintBottom_toTopOf="@id/extraControls"
        app:layout_constraintEnd_toStartOf="@id/exo_duration"
        app:layout_constraintStart_toStartOf="@id/startGuideLine"
        app:played_color="@color/media_player_controls"
        app:scrubber_color="@color/media_player_controls"
        app:scrubber_dragged_size="28dp"
        app:scrubber_enabled_size="20dp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/extraControls"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:paddingTop="24dp"
        app:layout_constraintBottom_toBottomOf="@id/bottomGuideLine"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintStart_toStartOf="@id/startGuideLine">

        <LinearLayout
            android:id="@+id/previousEpisode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exo_speed_selection_view"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/previous_episode_icon"
                app:srcCompat="@drawable/ic_previous_episode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/prev_ep"
                android:textColor="@color/media_player_controls" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/exo_speed_selection_view"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/exo_track_selection_view"
            app:layout_constraintStart_toEndOf="@id/previousEpisode">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/previous_episode_icon"
                app:srcCompat="@drawable/ic_speed" />

            <TextView
                android:id="@+id/exo_playback_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="Speed(1x)"
                android:textColor="@color/media_player_controls" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/exo_track_selection_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nextEpisode"
            app:layout_constraintStart_toEndOf="@id/exo_speed_selection_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="20dp"
                android:layout_height="18dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="4dp"
                android:contentDescription="@string/previous_episode_icon"
                app:srcCompat="@drawable/ic_quality" />

            <TextView
                android:id="@+id/exo_quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/qualityAuto"
                android:textColor="@color/media_player_controls" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/nextEpisode"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="bottom"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/exo_track_selection_view">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:contentDescription="@string/previous_episode_icon"
                app:srcCompat="@drawable/ic_next_episode" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/next_ep"
                android:textColor="@color/media_player_controls" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/exo_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/media_player_controls"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/extraControls"
        app:layout_constraintEnd_toEndOf="@id/endGuideLine"
        app:layout_constraintTop_toTopOf="@id/exo_progress"
        tools:text="20:30" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>