<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/animeInfoEndGuideline"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="360dp" />

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/tbAnimeInfo"
            style="@style/Widget.Material3.Toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBack"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:icon="@drawable/ic_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/favourite"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:icon="@drawable/ic_unfavorite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/animeInfoRoot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/animeInfoEndGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tbAnimeInfo">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/animeInfoImage"
                style="@style/Widget.Material3.CardView.Filled"
                android:layout_width="0dp"
                android:layout_height="160dp"
                android:scaleType="centerCrop"
                android:transitionName="@string/shared_anime_image"
                app:layout_constraintDimensionRatio="H,4:3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/animeInfoTitle"
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/anime_info_item_start_margin"
                android:layout_marginBottom="10dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:transitionName="@string/shared_anime_title"
                app:layout_constraintBottom_toTopOf="@+id/typeLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/animeInfoImage"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="BAKUSOU KYOUDAI LET'S GO WGP" />

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/anime_info_item_start_margin"
                android:layout_marginBottom="@dimen/anime_info_item_spacing"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/releasedLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/animeInfoImage"
                app:layout_constraintTop_toBottomOf="@+id/animeInfoTitle">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/type"
                    android:textColor="@color/material_on_surface_emphasis_medium" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/animeInfoType"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/material_on_surface_emphasis_high_type"
                    tools:text="TV Series" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/releasedLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/anime_info_item_start_margin"
                android:layout_marginBottom="@dimen/anime_info_item_spacing"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/statusLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/animeInfoImage"
                app:layout_constraintTop_toBottomOf="@+id/typeLayout">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/released"
                    android:textColor="@color/material_on_surface_emphasis_medium" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/animeInfoReleased"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/material_on_surface_emphasis_high_type"
                    tools:text="TV Series" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/statusLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/anime_info_item_start_margin"
                android:layout_marginBottom="@dimen/anime_info_item_spacing"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/flowLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/animeInfoImage"
                app:layout_constraintTop_toBottomOf="@+id/releasedLayout">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/status"
                    android:textColor="@color/material_on_surface_emphasis_medium" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/animeInfoStatus"
                    style="@style/TextAppearance.Material3.LabelMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/material_on_surface_emphasis_high_type"
                    tools:text="Completed" />
            </LinearLayout>

            <org.apmem.tools.layouts.FlowLayout
                android:id="@+id/flowLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@id/animeInfoImage"
                app:layout_constraintTop_toBottomOf="@+id/statusLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtSynopsis"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintEnd_toStartOf="@id/animeInfoEndGuideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animeInfoRoot" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/animeInfoRecyclerView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/animeInfoEndGuideline"
            app:layout_constraintTop_toBottomOf="@id/tbAnimeInfo" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading"
            style="@style/Widget.Material3.CircularProgressIndicator"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>